fix spacings

--- a/src/style.css
+++ b/src/style.css
@@ -4,8 +4,6 @@
 .and_wrapper {
   position: relative;
   margin-left: 50px;
-  margin-top: 50px;
-  margin-bottom: 60px;
 }
 
 .xor_wrapper .xor_note,
